k8s/rabbitmq-deployment.yaml
---
# Deployment RabbitMQ
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  namespace: agricity
  labels:
    app.kubernetes.io/name: rabbitmq
    app.kubernetes.io/component: message-broker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
        app.kubernetes.io/name: rabbitmq
        app.kubernetes.io/component: message-broker
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: rabbitmq
          image: rabbitmq:3.12-management
          ports:
            - name: amqp
              containerPort: 5672
              protocol: TCP
            - name: management
              containerPort: 15672
              protocol: TCP
          volumeMounts:
            - name: rabbitmq-data
              mountPath: /var/lib/rabbitmq
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          livenessProbe:
            exec:
              command:
                - rabbitmq-diagnostics
                - ping
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 10
            failureThreshold: 5
          readinessProbe:
            exec:
              command:
                - rabbitmq-diagnostics
                - ping
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
      volumes:
        - name: rabbitmq-data
          emptyDir: {}

---
#  Service ClusterIP (AMQP internal — port 5672)
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
  namespace: agricity
  labels:
    app.kubernetes.io/name: rabbitmq
    app.kubernetes.io/component: message-broker
spec:
  type: ClusterIP
  selector:
    app: rabbitmq
  ports:
    - name: amqp
      port: 5672
      targetPort: 5672
      protocol: TCP

---
# Service NodePort (Management UI — port 15672) 
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-management
  namespace: agricity
  labels:
    app.kubernetes.io/name: rabbitmq
    app.kubernetes.io/component: message-broker
    app.kubernetes.io/instance: management-ui
spec:
  type: NodePort
  selector:
    app: rabbitmq
  ports:
    - name: management
      port: 15672
      targetPort: 15672
      nodePort: 31672 
      protocol: TCP
